--- a/PGDIIT-Assaignment-1/packages.config
+++ b/PGDIIT-Assaignment-1/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="EPPlus" version="2.8.0.2" targetFramework="net452" />
   <package id="ExcelPackage" version="1.0.0" targetFramework="net452" />
+  <package id="Microsoft.Office.Interop.Excel" version="15.0.4795.1000" targetFramework="net452" />
 </packages>
